scripts/nullaway/annotator/url73605095e9_mp1401_misterx_tgz-pJ8-mp1401_examples_misterx_demo_shell_ShellDemoJ8.txt
../annotator/url73605095e9_mp1401_misterx_tgz-pJ8-mp1401_examples_misterx_demo_shell_ShellDemoJ8/src/mp1401/examples/misterx/demo/gui/DemoGameView.java:48: error: [NullAway] initializer method does not guarantee @NonNull fields mainWindow (line 38), buttonPanel (line 39), infoPanel (line 41), performActionButton (line 42) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public DemoGameView(Game game, DemoGameController controller) {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url73605095e9_mp1401_misterx_tgz-pJ8-mp1401_examples_misterx_demo_shell_ShellDemoJ8/src/mp1401/examples/misterx/demo/shell/ShellDemo.java:40: error: [NullAway] dereferenced expression gameCycleSimplifier is @Nullable
		gameCycleSimplifier.setStartPositions("Luzern", "Chur", "Basel");
		                   ^
    (see http://t.uber.com/nullaway )
../annotator/url73605095e9_mp1401_misterx_tgz-pJ8-mp1401_examples_misterx_demo_shell_ShellDemoJ8/src/mp1401/examples/misterx/model/gameitems/impl/MapImpl.java:37: error: [NullAway] dereferenced expression mapDataParser is @Nullable
		MapData mapData = mapDataParser.getMapData();
		                               ^
    (see http://t.uber.com/nullaway )
3 errors
